feat: add python an postgres text

--- a/techblog_app/templates/techblog_app/about.html
+++ b/techblog_app/templates/techblog_app/about.html
@@ -77,8 +77,8 @@
                     height="80" alt="Python card icon">
                 <div class="px-sm-3 py-5">
                     <h5>Python 3</h5>
-                    <p class="">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class=""><strong>Python 3</strong> is a newer version of the Python programming language which
+                        was released in December 2008.</p>
                 </div>
             </div>
             <div class="col">
@@ -87,8 +87,9 @@
                     alt="PostgreSQL card icon">
                 <div class="px-sm-3 py-5">
                     <h5>PostgreSQL</h5>
-                    <p class="">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <p class="">...also known as <strong>Postgres</strong>, is a free and
+                        open-source relational database, I used this for the database as I found it to be extremely
+                        reliable, with good docs.</p>
                 </div>
             </div>
         </div>
